# xbmc

./: Jenkinsfile  checkBinaryAddons.groovy  configure.ac  version.txt
Kodi.xcodeproj/: project.pbxproj
addons/resource.language.en_gb/resources/: strings.po
addons/skin.confluence/720p/: SmartPlaylistEditor.xml  ViewsVideoLibrary.xml
cmake/modules/: FindPython.cmake
lib/libexif/: libexif.vcxproj
project/BuildDependencies/scripts/: 0_package.list
project/VS2010Express/: XBMC for Windows.sln  XBMC.vcxproj  XBMC.vcxproj.filters
project/Win32BuildSetup/: BuildSetup.bat  readme.txt
system/keymaps/: gamepad.xml  keyboard.xml  remote.xml
tools/buildsteps/: defaultenv
tools/depends/: configure.ac
xbmc/: Application.cpp  ContextMenuItem.h  ContextMenuManager.cpp  ContextMenuManager.h  DatabaseManager.cpp  DatabaseManager.h  FileItem.cpp  FileItem.h  FileItemList.cpp  FileItemList.h  GUIInfoManager.cpp
xbmc/addons/: Addon.cpp  Addon.h  AddonCallbacksAddon.cpp  AddonCallbacksGUI.cpp  AddonDatabase.cpp  AddonDll.h  AddonInstaller.cpp  AddonManager.cpp  CMakeLists.txt  ContextMenus.h  GUIDialogAddonInfo.cpp  GUIDialogAddonSettings.cpp  GUIViewStateAddonBrowser.cpp  GUIWindowAddonBrowser.cpp  Scraper.cpp
xbmc/dbwrappers/: Database.cpp  Database.h  DatabaseMigration.cpp  DatabaseMigration.h  mysqldataset.cpp
xbmc/dialogs/: GUIDialogContextMenu.cpp  GUIDialogContextMenu.h  GUIDialogPlayerProcessInfo.cpp  GUIDialogPlayerProcessInfo.h  GUIDialogSmartPlaylistEditor.cpp
xbmc/epg/: GUIEPGGridContainer.cpp
xbmc/filesystem/: AndroidContentDirectory.cpp  DirectoryFactory.cpp  Makefile.in  VideoDatabaseDirectory.cpp
xbmc/guiinfo/: GUIInfoLabels.h
xbmc/guilib/: GUIBaseContainer.cpp  GUISliderControl.cpp  GUISliderControl.h  GUIWindowManager.cpp
xbmc/interfaces/: IAnnouncer.h
xbmc/interfaces/swig/: CMakeLists.txt
xbmc/listproviders/: DirectoryProvider.cpp  DirectoryProvider.h
xbmc/music/: CMakeLists.txt  ContextMenus.h
xbmc/pictures/: GUIWindowPictures.cpp
xbmc/programs/: GUIWindowPrograms.cpp
xbmc/search/: SearchDatabase.cpp  SearchDatabase.h
xbmc/utils/: DatabaseUtils.cpp  DatabaseUtils.h  FileOperationJob.cpp  FileOperationJob.h  JobManager.h  LabelFormatter.cpp  SortUtils.cpp  SortUtils.h  StringUtils.cpp  StringUtils.h
xbmc/video/: CMakeLists.txt  ContextMenus.cpp  ContextMenus.h  GUIViewStateVideo.cpp  VideoDatabase.cpp  VideoDatabase.h  VideoInfoScanner.cpp  VideoInfoTag.cpp  VideoInfoTag.h
xbmc/windows/: GUIMediaWindow.cpp  GUIWindowFileManager.cpp
(+50 files in other folders)
